--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.8.3
 click==8.2.1
 distro==1.9.0
 docstring_parser==0.17.0
+fastapi==0.116.1
 gitdb==4.0.12
 GitPython==3.1.45
 h11==0.16.0
@@ -27,8 +28,10 @@ rich==14.1.0
 shellingham==1.5.4
 smmap==5.0.2
 sniffio==1.3.1
+starlette==0.47.3
 tomli==2.2.1
 tqdm==4.67.1
 typer==0.17.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+uvicorn==0.35.0
