--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,55 @@
+ag-ui-protocol==0.1.8
 agno==2.0.4
 annotated-types==0.7.0
 anyio==4.10.0
 certifi==2025.8.3
 click==8.2.1
+deprecation==2.1.0
 distro==1.9.0
 docstring_parser==0.17.0
 fastapi==0.116.1
 gitdb==4.0.12
 GitPython==3.1.45
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 jiter==0.10.0
+lance-namespace==0.0.6
+lance-namespace-urllib3-client==0.0.14
+lancedb==0.25.0
 markdown-it-py==4.0.0
 mdurl==0.1.2
+numpy==2.3.3
 openai==1.102.0
+overrides==7.7.0
 packaging==25.0
+pandas==2.3.2
+pyarrow==21.0.0
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
+pylance==0.36.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 rich==14.1.0
 shellingham==1.5.4
+six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+SQLAlchemy==2.0.43
 starlette==0.47.3
+tantivy==0.25.0
 tomli==2.2.1
 tqdm==4.67.1
 typer==0.17.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
 uvicorn==0.35.0
