--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ ag-ui-protocol==0.1.8
 agno==2.0.4
 annotated-types==0.7.0
 anyio==4.10.0
+Brotli==1.1.0
 certifi==2025.8.3
 click==8.2.1
+ddgs==9.6.0
 deprecation==2.1.0
 distro==1.9.0
 docstring_parser==0.17.0
@@ -12,13 +14,17 @@ gitdb==4.0.12
 GitPython==3.1.45
 greenlet==3.2.4
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
+hyperframe==6.1.0
 idna==3.10
 jiter==0.10.0
 lance-namespace==0.0.6
 lance-namespace-urllib3-client==0.0.14
 lancedb==0.25.0
+lxml==6.0.1
 markdown-it-py==4.0.0
 mdurl==0.1.2
 numpy==2.3.3
@@ -26,12 +32,14 @@ openai==1.102.0
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
+primp==0.15.0
 pyarrow==21.0.0
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 pylance==0.36.0
+pypdf==6.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
@@ -42,6 +50,7 @@ shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+socksio==1.0.0
 SQLAlchemy==2.0.43
 starlette==0.47.3
 tantivy==0.25.0
