feat(image): 新增图像生成智能体与相关工具
- 支持通过自然语言提示生成图像，并返回图像 URL。
- 提供优化后的提示词生成功能，增强图像生成质量。
- 集成 `QwenImageTools` 工具包，支持调用 DashScope 图像生成接口。
- 添加示例用法和测试脚本，便于快速验证图像生成流程。
- 更新依赖库版本，引入 dashscope 等必要组件。

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
-ag-ui-protocol==0.1.8
-agno==2.0.4
+ag-ui-protocol==0.1.9
+agno==2.0.7
+agno-infra==1.0.3
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+attrs==25.3.0
 Brotli==1.1.0
 certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
 click==8.2.1
+cryptography==46.0.1
+dashscope==1.24.5
 ddgs==9.6.0
 deprecation==2.1.0
 distro==1.9.0
 docstring_parser==0.17.0
 fastapi==0.116.1
+frozenlist==1.7.0
 gitdb==4.0.12
 GitPython==3.1.45
 greenlet==3.2.4
@@ -27,13 +37,16 @@ lancedb==0.25.0
 lxml==6.0.1
 markdown-it-py==4.0.0
 mdurl==0.1.2
+multidict==6.6.4
 numpy==2.3.3
 openai==1.102.0
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
 primp==0.15.0
+propcache==0.3.2
 pyarrow==21.0.0
+pycparser==2.23
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
@@ -45,6 +58,7 @@ python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
+requests==2.32.5
 rich==14.1.0
 shellingham==1.5.4
 six==1.17.0
@@ -62,3 +76,5 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
+websocket-client==1.8.0
+yarl==1.20.1
