--- a/requirements.txt
+++ b/requirements.txt
@@ -7,21 +7,29 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
 attrs==25.3.0
+beautifulsoup4==4.13.5
+blosc2==3.8.0
 Brotli==1.1.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
+contourpy==1.3.3
 cryptography==46.0.1
+cycler==0.12.1
 dashscope==1.24.5
 ddgs==9.6.0
 deprecation==2.1.0
 distro==1.9.0
 docstring_parser==0.17.0
+exa==0.5.26
+exa-py==1.15.6
 fastapi==0.116.1
+fonttools==4.60.0
 frozenlist==1.7.0
 gitdb==4.0.12
 GitPython==3.1.45
+googlesearch-python==1.3.0
 greenlet==3.2.4
 h11==0.16.0
 h2==4.3.0
@@ -30,29 +38,46 @@ httpcore==1.0.9
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
+iniconfig==2.1.0
 jiter==0.10.0
+kiwisolver==1.4.9
 lance-namespace==0.0.6
 lance-namespace-urllib3-client==0.0.14
 lancedb==0.25.0
+llvmlite==0.45.0
 lxml==6.0.1
 markdown-it-py==4.0.0
+matplotlib==3.10.6
 mdurl==0.1.2
+mpmath==1.3.0
+msgpack==1.1.1
 multidict==6.6.4
+ndindex==1.10.0
+networkx==3.5
+numba==0.62.0
+numexpr==2.12.1
 numpy==2.3.3
 openai==1.102.0
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
+pillow==11.3.0
+platformdirs==4.4.0
+pluggy==1.6.0
 primp==0.15.0
 propcache==0.3.2
+py-cpuinfo==9.0.0
 pyarrow==21.0.0
+pycountry==24.6.1
 pycparser==2.23
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 pylance==0.36.0
+pyparsing==3.2.5
 pypdf==6.0.0
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
@@ -60,13 +85,17 @@ pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.5
 rich==14.1.0
+seaborn==0.13.2
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 socksio==1.0.0
+soupsieve==2.8
 SQLAlchemy==2.0.43
 starlette==0.47.3
+sympy==1.14.0
+tables==3.10.2
 tantivy==0.25.0
 tomli==2.2.1
 tqdm==4.67.1
