--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ag-ui-protocol==0.1.9
-agno==2.0.7
+agno==2.0.8
 agno-infra==1.0.3
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
@@ -57,15 +57,19 @@ networkx==3.5
 numba==0.62.0
 numexpr==2.12.1
 numpy==2.3.3
-openai==1.102.0
+openai==1.108.2
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
+pgvector==0.4.1
 pillow==11.3.0
 platformdirs==4.4.0
 pluggy==1.6.0
 primp==0.15.0
 propcache==0.3.2
+psycopg==3.2.10
+psycopg-binary==3.2.10
+psycopg2-binary==2.9.10
 py-cpuinfo==9.0.0
 pyarrow==21.0.0
 pycountry==24.6.1
@@ -76,7 +80,7 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 pylance==0.36.0
 pyparsing==3.2.5
-pypdf==6.0.0
+pypdf==6.1.0
 pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
