--- a/requirements.txt
+++ b/requirements.txt
@@ -35,11 +35,15 @@ h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
 httpcore==1.0.9
+httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.1
 hyperframe==6.1.0
 idna==3.10
 iniconfig==2.1.0
 jiter==0.10.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
 lance-namespace==0.0.6
 lance-namespace-urllib3-client==0.0.14
@@ -48,6 +52,7 @@ llvmlite==0.45.0
 lxml==6.0.1
 markdown-it-py==4.0.0
 matplotlib==3.10.6
+mcp==1.14.1
 mdurl==0.1.2
 mpmath==1.3.0
 msgpack==1.1.1
@@ -57,7 +62,7 @@ networkx==3.5
 numba==0.62.0
 numexpr==2.12.1
 numpy==2.3.3
-openai==1.108.2
+openai==1.109.0
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
@@ -87,8 +92,10 @@ python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
+referencing==0.36.2
 requests==2.32.5
 rich==14.1.0
+rpds-py==0.27.1
 seaborn==0.13.2
 shellingham==1.5.4
 six==1.17.0
@@ -97,6 +104,7 @@ sniffio==1.3.1
 socksio==1.0.0
 soupsieve==2.8
 SQLAlchemy==2.0.43
+sse-starlette==3.0.2
 starlette==0.47.3
 sympy==1.14.0
 tables==3.10.2
@@ -108,6 +116,10 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
-uvicorn==0.35.0
+uvicorn==0.37.0
+uvloop==0.21.0
+watchfiles==1.1.0
 websocket-client==1.8.0
+websockets==15.0.1
+wsproto==1.2.0
 yarl==1.20.1
