--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 pylance==0.36.0
+PyMySQL==1.1.2
 pyparsing==3.2.5
 pypdf==6.1.0
 pytest==8.4.2
