--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
 ag-ui-protocol==0.1.9
-agno==2.0.8
+agno==2.0.11
 agno-infra==1.0.3
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
+anthropic==0.68.1
 anyio==4.10.0
+asgiref==3.9.2
 attrs==25.3.0
+backoff==2.2.1
 beautifulsoup4==4.13.5
 blosc2==3.8.0
+boto3==1.40.40
+botocore==1.40.40
 Brotli==1.1.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
+colorama==0.4.6
 contourpy==1.3.3
 cryptography==46.0.1
 cycler==0.12.1
@@ -29,8 +35,11 @@ fonttools==4.60.0
 frozenlist==1.7.0
 gitdb==4.0.12
 GitPython==3.1.45
+googleapis-common-protos==1.70.0
 googlesearch-python==1.3.0
 greenlet==3.2.4
+griffe==1.14.0
+grpcio==1.75.1
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
@@ -40,14 +49,23 @@ httpx==0.28.1
 httpx-sse==0.4.1
 hyperframe==6.1.0
 idna==3.10
+importlib_metadata==8.7.0
 iniconfig==2.1.0
 jiter==0.10.0
+jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
 lance-namespace==0.0.6
 lance-namespace-urllib3-client==0.0.14
 lancedb==0.25.0
+langchain==0.3.27
+langchain-core==0.3.76
+langchain-text-splitters==0.3.11
+langfuse==3.5.1
+langsmith==0.4.31
 llvmlite==0.45.0
 lxml==6.0.1
 markdown-it-py==4.0.0
@@ -62,7 +80,34 @@ networkx==3.5
 numba==0.62.0
 numexpr==2.12.1
 numpy==2.3.3
-openai==1.109.0
+openai==1.109.1
+openai-agents==0.3.2
+openlit==1.35.4
+opentelemetry-api==1.37.0
+opentelemetry-exporter-otlp==1.37.0
+opentelemetry-exporter-otlp-proto-common==1.37.0
+opentelemetry-exporter-otlp-proto-grpc==1.37.0
+opentelemetry-exporter-otlp-proto-http==1.37.0
+opentelemetry-instrumentation==0.58b0
+opentelemetry-instrumentation-aiohttp-client==0.58b0
+opentelemetry-instrumentation-asgi==0.58b0
+opentelemetry-instrumentation-django==0.58b0
+opentelemetry-instrumentation-falcon==0.58b0
+opentelemetry-instrumentation-fastapi==0.58b0
+opentelemetry-instrumentation-flask==0.58b0
+opentelemetry-instrumentation-httpx==0.58b0
+opentelemetry-instrumentation-pyramid==0.58b0
+opentelemetry-instrumentation-requests==0.58b0
+opentelemetry-instrumentation-starlette==0.58b0
+opentelemetry-instrumentation-tornado==0.58b0
+opentelemetry-instrumentation-urllib==0.58b0
+opentelemetry-instrumentation-urllib3==0.58b0
+opentelemetry-instrumentation-wsgi==0.58b0
+opentelemetry-proto==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-semantic-conventions==0.58b0
+opentelemetry-util-http==0.58b0
+orjson==3.11.3
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
@@ -72,6 +117,7 @@ platformdirs==4.4.0
 pluggy==1.6.0
 primp==0.15.0
 propcache==0.3.2
+protobuf==6.32.1
 psycopg==3.2.10
 psycopg-binary==3.2.10
 psycopg2-binary==2.9.10
@@ -95,8 +141,11 @@ pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.5
+requests-toolbelt==1.0.0
 rich==14.1.0
 rpds-py==0.27.1
+s3transfer==0.14.0
+schedule==1.2.2
 seaborn==0.13.2
 shellingham==1.5.4
 six==1.17.0
@@ -110,9 +159,11 @@ starlette==0.47.3
 sympy==1.14.0
 tables==3.10.2
 tantivy==0.25.0
+tenacity==9.1.2
 tomli==2.2.1
 tqdm==4.67.1
 typer==0.17.3
+types-requests==2.32.4.20250913
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
@@ -122,5 +173,9 @@ uvloop==0.21.0
 watchfiles==1.1.0
 websocket-client==1.8.0
 websockets==15.0.1
+wrapt==1.17.3
 wsproto==1.2.0
+xmltodict==0.15.1
 yarl==1.20.1
+zipp==3.23.0
+zstandard==0.25.0
