--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ag-ui-protocol==0.1.9
-agno==2.0.11
+agno==2.1.4
 agno-infra==1.0.3
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
@@ -7,6 +7,7 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 anthropic==0.68.1
 anyio==4.10.0
+arxiv==2.2.0
 asgiref==3.9.2
 attrs==25.3.0
 backoff==2.2.1
@@ -31,6 +32,7 @@ docstring_parser==0.17.0
 exa==0.5.26
 exa-py==1.15.6
 fastapi==0.117.1
+feedparser==6.0.12
 fonttools==4.60.0
 frozenlist==1.7.0
 gitdb==4.0.12
@@ -147,6 +149,7 @@ rpds-py==0.27.1
 s3transfer==0.14.0
 schedule==1.2.2
 seaborn==0.13.2
+sgmllib3k==1.0.0
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
