--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ arxiv==2.2.0
 asgiref==3.9.2
 attrs==25.3.0
 backoff==2.2.1
+baidusearch==1.0.3
 beautifulsoup4==4.13.5
 blosc2==3.8.0
 boto3==1.40.40
