--- a/requirements.txt
+++ b/requirements.txt
@@ -1,185 +1,46 @@
 ag-ui-protocol==0.1.9
-agno==2.1.4
-agno-infra==1.0.3
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-annotated-types==0.7.0
-anthropic==0.68.1
-anyio==4.10.0
+agno==2.1.7
+agno-infra==1.0.4
+aiofiles==25.1.0
+aiosqlite==0.21.0
+alphashape==1.3.1
 arxiv==2.2.0
-asgiref==3.9.2
-attrs==25.3.0
-backoff==2.2.1
 baidusearch==1.0.3
-beautifulsoup4==4.13.5
-blosc2==3.8.0
-boto3==1.40.40
-botocore==1.40.40
 Brotli==1.1.0
-certifi==2025.8.3
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.2.1
-colorama==0.4.6
-contourpy==1.3.3
-cryptography==46.0.1
-cycler==0.12.1
-dashscope==1.24.5
-ddgs==9.6.0
-deprecation==2.1.0
-distro==1.9.0
-docstring_parser==0.17.0
+chardet==5.2.0
+dashscope==1.24.6
 exa==0.5.26
 exa-py==1.15.6
-fastapi==0.117.1
-feedparser==6.0.12
-fonttools==4.60.0
-frozenlist==1.7.0
-gitdb==4.0.12
-GitPython==3.1.45
-googleapis-common-protos==1.70.0
+fake-useragent==2.2.0
+fastapi==0.119.0
 googlesearch-python==1.3.0
-greenlet==3.2.4
-griffe==1.14.0
-grpcio==1.75.1
-h11==0.16.0
 h2==4.3.0
-hpack==4.1.0
-httpcore==1.0.9
 httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.1
-hyperframe==6.1.0
-idna==3.10
-importlib_metadata==8.7.0
-iniconfig==2.1.0
-jiter==0.10.0
-jmespath==1.0.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-kiwisolver==1.4.9
-lance-namespace==0.0.6
-lance-namespace-urllib3-client==0.0.14
+humanize==4.14.0
 lancedb==0.25.0
-langchain==0.3.27
-langchain-core==0.3.76
-langchain-text-splitters==0.3.11
 langfuse==3.5.1
-langsmith==0.4.31
-llvmlite==0.45.0
-lxml==6.0.1
-markdown-it-py==4.0.0
-matplotlib==3.10.6
-mcp==1.14.1
-mdurl==0.1.2
-mpmath==1.3.0
-msgpack==1.1.1
-multidict==6.6.4
-ndindex==1.10.0
-networkx==3.5
-numba==0.62.0
-numexpr==2.12.1
-numpy==2.3.3
-openai==1.109.1
-openai-agents==0.3.2
+lark==1.3.0
+litellm==1.78.2
+nltk==3.9.2
 openlit==1.35.4
-opentelemetry-api==1.37.0
-opentelemetry-exporter-otlp==1.37.0
-opentelemetry-exporter-otlp-proto-common==1.37.0
-opentelemetry-exporter-otlp-proto-grpc==1.37.0
-opentelemetry-exporter-otlp-proto-http==1.37.0
-opentelemetry-instrumentation==0.58b0
-opentelemetry-instrumentation-aiohttp-client==0.58b0
-opentelemetry-instrumentation-asgi==0.58b0
-opentelemetry-instrumentation-django==0.58b0
-opentelemetry-instrumentation-falcon==0.58b0
-opentelemetry-instrumentation-fastapi==0.58b0
-opentelemetry-instrumentation-flask==0.58b0
-opentelemetry-instrumentation-httpx==0.58b0
-opentelemetry-instrumentation-pyramid==0.58b0
-opentelemetry-instrumentation-requests==0.58b0
-opentelemetry-instrumentation-starlette==0.58b0
-opentelemetry-instrumentation-tornado==0.58b0
-opentelemetry-instrumentation-urllib==0.58b0
-opentelemetry-instrumentation-urllib3==0.58b0
-opentelemetry-instrumentation-wsgi==0.58b0
-opentelemetry-proto==1.37.0
-opentelemetry-sdk==1.37.0
-opentelemetry-semantic-conventions==0.58b0
-opentelemetry-util-http==0.58b0
-orjson==3.11.3
-overrides==7.7.0
-packaging==25.0
-pandas==2.3.2
+patchright==1.55.2
 pgvector==0.4.1
-pillow==11.3.0
-platformdirs==4.4.0
-pluggy==1.6.0
-primp==0.15.0
-propcache==0.3.2
-protobuf==6.32.1
+pip==25.2
+psutil==7.1.0
 psycopg==3.2.10
 psycopg-binary==3.2.10
 psycopg2-binary==2.9.10
-py-cpuinfo==9.0.0
-pyarrow==21.0.0
 pycountry==24.6.1
-pycparser==2.23
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-Pygments==2.19.2
-pylance==0.36.0
 PyMySQL==1.1.2
-pyparsing==3.2.5
+pyOpenSSL==25.3.0
 pypdf==6.1.0
-pytest==8.4.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-referencing==0.36.2
-requests==2.32.5
-requests-toolbelt==1.0.0
-rich==14.1.0
-rpds-py==0.27.1
-s3transfer==0.14.0
-schedule==1.2.2
-seaborn==0.13.2
-sgmllib3k==1.0.0
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
+rank-bm25==0.2.2
+snowballstemmer==2.2.0
 socksio==1.0.0
-soupsieve==2.8
-SQLAlchemy==2.0.43
-sse-starlette==3.0.2
-starlette==0.47.3
-sympy==1.14.0
-tables==3.10.2
 tantivy==0.25.0
-tenacity==9.1.2
-tomli==2.2.1
-tqdm==4.67.1
-typer==0.17.3
-types-requests==2.32.4.20250913
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.37.0
+tf-playwright-stealth==1.2.0
 uvloop==0.21.0
 watchfiles==1.1.0
-websocket-client==1.8.0
 websockets==15.0.1
-wrapt==1.17.3
 wsproto==1.2.0
-xmltodict==0.15.1
-yarl==1.20.1
-zipp==3.23.0
-zstandard==0.25.0
+xxhash==3.6.0
