--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 ag-ui-protocol==0.1.9
 agno==2.2.0
 agno-infra==1.0.4
-aiofiles==25.1.0
 aiosqlite==0.21.0
 alphashape==1.3.1
 arxiv==2.2.0
@@ -22,12 +21,11 @@ lancedb==0.25.0
 langfuse==3.5.1
 lark==1.3.0
 litellm==1.78.2
-nltk==3.9.2
+Markdown==3.9
 openlit==1.35.4
 patchright==1.55.2
 pgvector==0.4.1
 pip==25.2
-psutil==7.1.0
 psycopg==3.2.11
 psycopg-binary==3.2.10
 psycopg2-binary==2.9.10
@@ -35,13 +33,13 @@ pycountry==24.6.1
 pymilvus==2.6.2
 PyMySQL==1.1.2
 pyOpenSSL==25.3.0
-pypdf==6.1.0
 rank-bm25==0.2.2
 reportlab==4.4.4
 snowballstemmer==2.2.0
 socksio==1.0.0
 tantivy==0.25.0
 tf-playwright-stealth==1.2.0
+unstructured==0.18.15
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
