--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ag-ui-protocol==0.1.9
-agno==2.2.0
+agno==2.2.1
 agno-infra==1.0.4
 aiosqlite==0.21.0
 alphashape==1.3.1
@@ -8,7 +8,7 @@ baidusearch==1.0.3
 Brotli==1.1.0
 chardet==5.2.0
 chonkie==1.4.0
-dashscope==1.24.6
+dashscope==1.24.7
 exa==0.5.26
 exa-py==1.15.6
 fake-useragent==2.2.0
@@ -35,10 +35,13 @@ PyMySQL==1.1.2
 pyOpenSSL==25.3.0
 rank-bm25==0.2.2
 reportlab==4.4.4
+scikit-learn==1.7.2
 snowballstemmer==2.2.0
 socksio==1.0.0
 tantivy==0.25.0
 tf-playwright-stealth==1.2.0
+torch==2.2.2
+transformers==4.57.1
 unstructured==0.18.15
 uvloop==0.21.0
 watchfiles==1.1.0
