--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 ag-ui-protocol==0.1.9
-agno==2.2.1
+agno==2.2.3
 agno-infra==1.0.4
 aiosqlite==0.21.0
 alphashape==1.3.1
+apify_client==2.2.1
 arxiv==2.2.0
 baidusearch==1.0.3
 Brotli==1.1.0
@@ -48,5 +49,6 @@ unstructured==0.18.15
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
+wikipedia==1.4.0
 wsproto==1.2.0
 xxhash==3.6.0
