--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ag-ui-protocol==0.1.9
+ag-ui-protocol==0.1.10
 agno==2.2.13
 agno-infra==1.0.4
 aiosqlite==0.21.0
@@ -9,12 +9,12 @@ baidusearch==1.0.3
 Brotli==1.1.0
 chardet==5.2.0
 chonkie==1.4.0
-dashscope==1.24.8
+dashscope==1.25.1
 ddgs==9.6.1
 exa==0.5.26
 exa-py==1.15.6
 fake-useragent==2.2.0
-fastapi==0.120.0
+fastapi==0.121.2
 googlesearch-python==1.3.0
 h2==4.3.0
 httptools==0.6.4
@@ -32,7 +32,7 @@ psycopg==3.2.11
 psycopg-binary==3.2.10
 psycopg2-binary==2.9.10
 pycountry==24.6.1
-pymilvus==2.6.2
+pymilvus==2.6.3
 PyMySQL==1.1.2
 pyOpenSSL==25.3.0
 rank-bm25==0.2.2
@@ -45,6 +45,7 @@ tf-playwright-stealth==1.2.0
 toolbox-core==0.5.2
 torch==2.2.2
 transformers==4.57.1
+ujson==5.11.0
 unstructured==0.18.15
 uvloop==0.21.0
 watchfiles==1.1.0
