--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ag-ui-protocol==0.1.10
-agno==2.3.4
+agno==2.3.6
 agno-infra==1.0.5
 aiosqlite==0.21.0
 alphashape==1.3.1
@@ -24,6 +24,7 @@ langfuse==3.5.1
 lark==1.3.0
 litellm==1.78.2
 Markdown==3.9
+openinference-instrumentation-agno==0.1.23
 openlit==1.35.4
 patchright==1.55.2
 pgvector==0.4.1
